--- a/src/groups.html
+++ b/src/groups.html
@@ -12,7 +12,7 @@
       src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
   </head>
-  <body>
+  <body class="bg-[url('/dist/images/grps.png')] w-full h-full bg-cover bg-no-repeat">
     <!------------Sidebar--------------->
     <!--
       This example requires Tailwind CSS v2.0+ 
@@ -1232,9 +1232,6 @@
           </div>
         </main>
         <button class="m-auto px-16 py-2 mt-4 border-2 border-cyan-800 rounded-md shadow-md text-white text-sm font-semibold bg-cyan-800 hover:bg-cyan-900" phx-disable-with="Updating..." type="submit">Add Group</button>
-      </div>
-      <div class="flex justify-end bg-[url('/dist/images/high 1.png')] bg-contain bg-no-repeat bg-left-bottom">
-        <img src="/dist/images/high 1.png" alt="">
       </div>
     </div>
   </body>
