--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="bg-[url('/dist/images/background_ellipse.png')] bg-no-repeat">
-      <div class="relative shadow-lg">
+      <div class="sticky top-0 relative shadow-lg">
         <div
           class="flex justify-between items-center px-4 py-6 sm:px-6 md:justify-start md:space-x-10"
         >
@@ -699,6 +699,7 @@
           </div>
         </div>
       </div>
+        <div>
       <div class="grid grid-cols-2 py-20 px-10 text-justify">
         <div>
           <img
