--- a/src/general.html
+++ b/src/general.html
@@ -895,6 +895,30 @@
         </div>
       </div>
     </div>
+    <!-------Three Column--------->
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <div class="flex flex-row justify-between">
+      <div>
+        <img src="/dist/images/Teacher.jpg" class="w-96 h-96" alt="">
+      </div>
+      <h1 class="text-lg font-bold">Study</h1>
+      <p class="text-md font-medium">We make provision for all students to have good educational experience and success</p>
+    </div>
+    <div class="flex flex-row justify-between">
+      <div>
+        <img src="/dist/images/Teacher.jpg" class="w-96 h-96" alt="">
+      </div>
+      <h1 class="text-lg font-bold">Study</h1>
+      <p class="text-md font-medium">We make provision for all students to have good educational experience and success</p>
+    </div>
+    <div class="flex flex-row justify-between">
+      <div>
+        <img src="/dist/images/Teacher.jpg" class="w-96 h-96" alt="">
+      </div>
+      <h1 class="text-lg font-bold">Study</h1>
+      <p class="text-md font-medium">We make provision for all students to have good educational experience and success</p>
+    </div>
+
     <!-----------Subjects---------->
     <div><img src="/dist/images/subject dangling.jpg"class="w-full h-96" alt=""></div>
     <!------Exam Categories --------->
