Testing Are Three

--- a/src/index.html
+++ b/src/index.html
@@ -708,20 +708,19 @@
             alt=""
           />
         </div>
-        <div class="pt-20">
-          <h1 class="font-bold text-5xl text-cyan-600">
+        <div class="pt-20 sm:ml-14">
+          <h1 class="font-bold text-5xl text-cyan-600 sm:p-4 sm:text-2xl">
             We offer the Best with <br />
             Our Great System
           </h1>
-          <p class="text-xl text-gray-500 pt-2">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br />
+          <p class="text-xl sm:text-lg sm:ml-4 text-gray-500 pt-2 sm:text-justify">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Distinctio numquam ipsam blanditiis saepe temporibus velit quod
-            <br />
-            ad deserunt reiciendis commodi?
+           
           </p>
           <a
             href="signin.html"
-            class="inline-block bg-cyan-800 py-2 px-10 mt-2 ml-18 border border-transparent rounded-3xl text-base font-medium text-white hover:bg-cyan-900"
+            class="inline-block bg-cyan-800  sm:ml-4 py-2 px-10 mt-2 ml-18 border border-transparent rounded-3xl text-base font-medium text-white hover:bg-cyan-900"
             >Sign in</a
           >
         </div>
@@ -735,7 +734,7 @@
               Pricing
             </h2>
             <p
-              class="mt-1 text-4xl font-extrabold text-gray-900 sm:text-5xl sm:tracking-tight lg:text-6xl"
+              class="mt-1 text-4xl font-extrabold text-gray-900 sm:text-3xl sm:tracking-tight lg:text-6xl"
             >
               Ensure excellence in Your Studies.
             </p>
@@ -754,42 +753,42 @@
           <div
             class="col-span-1 flex justify-center md:col-span-2 lg:col-span-1"
           >
-            <img class="h-18" src="/dist/images/NABTEB-logo.jpg" alt="Tuple" />
+            <img class="h-18 sm:h-14.5" src="/dist/images/NABTEB-logo.jpg" alt="Tuple" />
           </div>
           <div
             class="col-span-1 flex justify-center md:col-span-2 lg:col-span-1"
           >
             <img
-              class="h-16.5"
+              class="h-16.5 sm:h-14.5"
               src="/dist/images/Neco_official_banner.jpg"
-              alt="Mirage"
+              alt="Neco"
             />
           </div>
           <div
             class="col-span-1 flex justify-center md:col-span-2 lg:col-span-1"
           >
             <img
-              class="h-18"
+              class="h-18 sm:h-14.5"
               src="/dist/images/Waec_logo.png"
-              alt="StaticKit"
+              alt="Waec"
             />
           </div>
           <div
             class="col-span-1 flex justify-center md:col-span-3 lg:col-span-1"
           >
             <img
-              class="h-18"
+              class="h-18 sm:h-14.5"
               src="/dist/images/download.jpg"
-              alt="Transistor"
+              alt="JAMB"
             />
           </div>
           <div
             class="col-span-1 flex justify-center md:col-span-3 lg:col-span-1"
           >
             <img
-              class="h-18"
+              class="h-18 sm:h-14.5"
               src="/dist/images/NABTEB-logo.jpg"
-              alt="Transistor"
+              alt="NABTEB-logo"
             />
           </div>
         </div>
@@ -1029,12 +1028,12 @@
     </div>
     <div class="grid grid-cols-2 py-20 px-10 text-justify">
       <div><img src="/dist/images/Library.png" class="ml-10" alt="" /></div>
-      <div class="pt-20">
-        <h1 class="font-bold text-5xl text-cyan-600">
+      <div class="pt-20 sm:ml-16">
+        <h1 class="font-bold text-5xl text-cyan-600 sm:text-2xl">
           We Have Loads of <br />
           Study Materials
         </h1>
-        <p class="text-xl text-gray-500 pt-2 text-">
+        <p class="text-xl text-gray-500 pt-2 sm:text-lg">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br />
           Distinctio numquam ipsam blanditiis saepe temporibus velit quod <br />
           ad deserunt reiciendis commodi?
