--- a/src/instruction.html
+++ b/src/instruction.html
@@ -270,6 +270,7 @@
           From: "opacity-100"
           To: "opacity-0"
       -->
+      <div>
         <div
           class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
         ></div>
@@ -369,5 +370,6 @@
           </div>
         </div>
       </div>
+    
   </body>
 </html>
